--- a/src/app/inhouse/genemgn/deletegene/deletegene.component.html
+++ b/src/app/inhouse/genemgn/deletegene/deletegene.component.html
@@ -1,1 +1,11 @@
-<p>deletegene works!</p>
+        <!--popup size = width: 300px;height: 180px;-->
+        <div class="container">
+          <div class="title">삭제 유전자명</div>
+          <div class="content">
+              <label class="wid100p">{{genename}}</label>
+          </div>
+          <div class="btn-gp">
+              <button class="btn btn_bg" (click)="save()"><span>확인</span></button>
+              <button class="btn" (click)="cancel()"><span>취소</span></button>
+          </div>
+      </div> 
