--- a/src/app/inhouse/inhouse.component.html
+++ b/src/app/inhouse/inhouse.component.html
@@ -1,5 +1,6 @@
-<div class="inhouse">
-    <div class="sidemenu">
+<div class="inhouse" >
+    <div class="sidemenu"style="width:0px;height:0px;">
+    	<!-- 
         <main class="main-content">
             <aside class="sidebar">
                     <div class="menu-admin">
@@ -33,7 +34,8 @@
                     </div>
             </aside>        
         </main>
-    </div>
+         -->
+    </div> 
     <div class="contents">
         <router-outlet></router-outlet>
     </div> 
