inhouse 화면 링크 수정

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,7 +25,7 @@
                   </td>
             
                   <td class="menu03">
-                    <a routerLink="/diag/inhouse/benign"><span class="nav-text"></span></a>
+                    <a routerLink="/diag/benignComponent"><span class="nav-text"></span></a>
                      
                      <ul class="sub-menu"> 
                       <li><span (click)="link('benign')">Benigne</span></li>
