--- a/src/app/inhouse/genemgn/genemgn.component.scss
+++ b/src/app/inhouse/genemgn/genemgn.component.scss
@@ -1,6 +1,6 @@
-td:hover {
-  background-color: antiquewhite;
-}
+// td:hover {
+//   background-color: antiquewhite;
+// }
 
 td {
   cursor: pointer;
