--- a/src/app/inhouse/inhouse.component.html
+++ b/src/app/inhouse/inhouse.component.html
@@ -25,11 +25,11 @@
                                     <a routerLink="/diag/inhouse/comments" class="active nav-link" routerLinkActive="active">Comments</a>
                                 </div>
                             </li>  
-                            <li>
+                            <!-- <li>
                                 <div class="title">
-                                    <a routerLink="/diag/inhouse/genemgn" class="active nav-link bold">유전자관리</a>
+                                    <a routerLink="/diag/inhouse/comments" class="active nav-link bold">유전자관리</a>
                                 </div>
-                            </li>                                  
+                            </li>                                   -->
                         </ul>
                     </div>
             </aside>        
