--- a/src/app/inhouse/genemgn/genemgn.component.scss
+++ b/src/app/inhouse/genemgn/genemgn.component.scss
@@ -1,19 +1,10 @@
 td:hover {
-  background-color: antiquewhite;
-}
-
-td {
   cursor: pointer;
 }
 
-td:active {
-  background-color: lightcyan;
-}
-
-.active {
-  background-color: lightcyan;
-}
-
-.inactive {
-  background-color: antiquewhite;
+.select_001 {
+  padding: 0.6212rem 0.8571rem !important;
+  background-color: #f5f5f5;
+  background-clip: padding-box;
+  border: 1px solid #dcdcdc;
 }
