--- a/src/app/byengri/byengri/report/report.component.html
+++ b/src/app/byengri/byengri/report/report.component.html
@@ -1185,7 +1185,7 @@
           </li>          
       
           <li>
-            <button type="button" class="btn btn_01" [disabled]="getStatus(3)" (click)="sendEMR()">EMR전송</button>
+            <button type="button" class="btn btn_01" [disabled]="getStatus(3)" (click)="makeEMRBase()">EMR전송</button>
           </li>            
           <li>
             <button type="button" class="btn btn_01" [disabled]="getStatus(4)" (click)="reset()">전송취소</button>
