--- a/src/app/inhouse/genemgn/genemgn.component.scss
+++ b/src/app/inhouse/genemgn/genemgn.component.scss
@@ -6,5 +6,9 @@
    padding: 0.6212rem 0.8571rem !important;
    background-color: #f5f5f5;
    background-clip: padding-box;
-   border: 1px solid #dcdcdc;
+   border: 1px solid #b35959;
+ }
+
+ .selected {
+   background-color: lightcoral;
  }
