--- a/src/app/byengri/byengri/report/report.component.html
+++ b/src/app/byengri/byengri/report/report.component.html
@@ -310,7 +310,7 @@
         <br>
         <div class="sub_title_04">(2) Amplification: <span *ngIf="!iamplifications.length"
             class="sub_title_04">{{noneIAm}}</span>&nbsp;&nbsp;</div>
-        <!-- <div class="font_14 pd_l35 pd_b15">{{msgAm}}</div>     -->
+        <div class="font_14 pd_l35 pd_b15">{{msgAm2}}</div>    
         <!-- <div class="font_14 pd_l35 pd_b15"> * Copy number loss에 관해서는 뒷부분에 첨부된 이미지 보고서를 참고하여 주십시오.</div> -->
         <!-- ------------------------------   -->
 
