--- a/src/app/byengri/byengri/report/report.component.html
+++ b/src/app/byengri/byengri/report/report.component.html
@@ -174,11 +174,11 @@
               <table width="100%" cellpadding="0" cellspacing="0" class="table_result pd_l35">
                 <thead>
                   <tr>
-                    <th class="table_result_line fontsize" style="width:150px;">Gene</th>
-                    <th class="fontsize">Region </th>
-                    <th class="fontsize">Estimated copy number </th>
-                    <th style="width:130px;font-size: 14px;">Tier</th>
-                    <th style="width:130px;">
+                    <th class="table_result_line fontsize" style="width:15%;">Gene</th>
+                    <th class="fontsize" style="width:60%;font-size: 14px;">Region </th>
+                    <th class="fontsize" style="width:15%;font-size: 14px;">Estimated copy number </th>
+                    <th style="fontsize" style="width:15%;font-size: 14px;">Tier</th>
+                    <th style="fontsize" style="width:15%;">
                       <button class="btn btn_01" (click)="addAmplifications()">추가</button>
                     </th>
                   </tr>
@@ -320,11 +320,11 @@
             <table width="100%" cellpadding="0" cellspacing="0" class="table_result pd_l35 mg_b10">
               <thead>
                 <tr>
-                  <th class="table_result_line fontsize" style="width:130px;">Gene</th>
-                  <th class="fontsize">Region </th>
-                  <th class="fontsize">Estimated copy number </th>
-                  <th style="width:130px;font-size: 14px;">Note </th>
-                  <th style="width:130px;">
+                  <th class="table_result_line fontsize" style="width:15%;">Gene</th>
+                  <th class="fontsize" style="width:60%;font-size: 14px;">Region </th>
+                  <th class="fontsize" style="width:15%;font-size: 14px;">Estimated copy number </th>
+                  <th style="fontsize" style="width:15%;font-size: 14px;">Note </th>
+                  <th style="width:15%;">
                     <button class="btn btn_01" (click)="addIAmplifications()">추가</button>
                   </th>
                 </tr>
