--- a/src/app/byengri/byengri/report/report.component.html
+++ b/src/app/byengri/byengri/report/report.component.html
@@ -174,11 +174,11 @@
               <table width="100%" cellpadding="0" cellspacing="0" class="table_result pd_l35">
                 <thead>
                   <tr>
-                    <th class="table_result_line fontsize" style="width:15%;">Gene</th>
-                    <th class="fontsize" style="width:60%;font-size: 14px;">Region </th>
-                    <th class="fontsize" style="width:15%;font-size: 14px;">Estimated copy number </th>
-                    <th style="fontsize" style="width:15%;font-size: 14px;">Tier</th>
-                    <th style="fontsize" style="width:15%;">
+                    <th class="table_result_line fontsize" style="width:150px;">Gene</th>
+                    <th class="fontsize">Region </th>
+                    <th class="fontsize">Estimated copy number </th>
+                    <th style="width:130px;font-size: 14px;">Tier</th>
+                    <th style="width:130px;">
                       <button class="btn btn_01" (click)="addAmplifications()">추가</button>
                     </th>
                   </tr>
@@ -310,7 +310,7 @@
         <br>
         <div class="sub_title_04">(2) Amplification: <span *ngIf="!iamplifications.length"
             class="sub_title_04">{{noneIAm}}</span>&nbsp;&nbsp;</div>
-        <div class="font_14 pd_l35 pd_b15">{{msgAm2}}</div>    
+        <!-- <div class="font_14 pd_l35 pd_b15">{{msgAm}}</div>     -->
         <!-- <div class="font_14 pd_l35 pd_b15"> * Copy number loss에 관해서는 뒷부분에 첨부된 이미지 보고서를 참고하여 주십시오.</div> -->
         <!-- ------------------------------   -->
 
@@ -320,11 +320,11 @@
             <table width="100%" cellpadding="0" cellspacing="0" class="table_result pd_l35 mg_b10">
               <thead>
                 <tr>
-                  <th class="table_result_line fontsize" style="width:15%;">Gene</th>
-                  <th class="fontsize" style="width:60%;font-size: 14px;">Region </th>
-                  <th class="fontsize" style="width:15%;font-size: 14px;">Estimated copy number </th>
-                  <th style="fontsize" style="width:15%;font-size: 14px;">Note </th>
-                  <th style="width:15%;">
+                  <th class="table_result_line fontsize" style="width:130px;">Gene</th>
+                  <th class="fontsize">Region </th>
+                  <th class="fontsize">Estimated copy number </th>
+                  <th style="width:130px;font-size: 14px;">Note </th>
+                  <th style="width:130px;">
                     <button class="btn btn_01" (click)="addIAmplifications()">추가</button>
                   </th>
                 </tr>
