--- a/src/app/byengri/byengri/report/report.component.html
+++ b/src/app/byengri/byengri/report/report.component.html
@@ -261,15 +261,24 @@
         <div style="margin-right:18px;">
           <form [formGroup]="imutationForm">
             <table width="100%" cellpadding="0" cellspacing="0" class="table_result pd_l35">
+              <colgroup>
+                <col width="130px">
+                <col width="*">
+                <col width="*">
+                <col width="10%">
+                <col width="130px">
+                <col width="130px">
+                <col width="130px">
+              </colgroup>
               <thead>
                 <tr>
-                  <th class="table_result_line fontsize" style="width:130px;">Gene</th>
+                  <th class="table_result_line fontsize">Gene</th>
                   <th class="fontsize">Amino acid change</th>
                   <th class="fontsize">Nucleotide change</th>
-                  <th class="fontsize" style="width: 10%">Variant allele frequency</th>
-                  <th style="width: 130px;font-size: 14x;">ID</th>
-                  <th style="width:130px;font-size: 14px">Note</th>
-                  <th style="width:130px;">
+                  <th class="fontsize">Variant allele frequency</th>
+                  <th style="font-size: 14x;">ID</th>
+                  <th style="font-size: 14px">Note</th>
+                  <th>
                     <button class="btn btn_01" (click)="addIMutation()">추가</button>
                   </th>
                 </tr>
