병리 리포트 update

--- a/src/app/byengri/byengri/report/report.component.html
+++ b/src/app/byengri/byengri/report/report.component.html
@@ -110,6 +110,15 @@
                      <col style="width:130px"/>
                      <col style="width:130px"/>
                   </colgroup> -->
+                  <colgroup>
+                    <col width="130px">
+                    <col width="*">
+                    <col width="*">
+                    <col width="10%">
+                    <col width="130px">
+                    <col width="130px">
+                    <col width="130px">
+                  </colgroup>
                 <thead>
                   <tr>
                     <!-- <th class="table_result_line fontsize" style="width:50px;">Gene</th>
@@ -119,13 +128,13 @@
                     <th class="fontsize">ID</th>
                     <th style="font-size: 14px;">Tier</th>
                     <th style="font-size: 14px;"> -->
-                      <th class="table_result_line fontsize" style="width:130px;">Gene</th>
-                      <th class="fontsize">Amino acid change</th>
-                      <th class="fontsize">Nucleotide change</th>
-                      <th class="fontsize" style="width: 10%">Variant allele frequency</th>
-                      <th style="width: 130px;font-size: 14x;">ID</th>
-                      <th style="width:130px;font-size: 14px">Tier</th>
-                      <th style="width:130px;">                      
+                    <th class="table_result_line fontsize">Gene</th>
+                    <th class="fontsize">Amino acid change</th>
+                    <th class="fontsize">Nucleotide change</th>
+                    <th class="fontsize">Variant allele frequency</th>
+                    <th style="font-size: 14x;">ID</th>
+                    <th style="font-size: 14px">Tier</th>
+                    <th>                      
                       <button class="btn btn_01" (click)="addMutation()">추가</button>
                     </th>
                   </tr>
