--- a/src/app/byengri/byengri/report/report.component.html
+++ b/src/app/byengri/byengri/report/report.component.html
@@ -422,9 +422,16 @@
             [value]="tumorMutationalBurden" #tumormutationalburden
             (change)="tumormutationalburdenChange(tumormutationalburden.value)" class="input_02" size="5"
             style="font-weight:bold; font-size:16px;text-align: center;" /></div>
-        <div class="sub_title_03_E">MSI Score:<input type="text" [value]="msiScore + '(MSS)'" class="input_02" size="10"
+
+        <div *ngIf="!msiTag" class="sub_title_03_E">MSI Score:<input type="text" [value]="msiScore + '(MSS)'" class="input_02" size="10"
             #msiscore (change)="msiScoreChange(msiscore.value)"
-            style="font-weight:bold; font-size:16px;text-align:center;" /></div>
+            style="font-weight:bold; font-size:16px;text-align:center;" />
+          </div>
+          <div *ngIf="msiTag" class="sub_title_03_E">MSI Score:<input type="text" [value]="msiScore" class="input_02" size="10"
+            #msiscore (change)="msiScoreChange(msiscore.value)"
+            style="font-weight:bold; font-size:16px;text-align:center;" />
+          </div>
+
 
         <!-- <div class="sub_title_03_E">Tumor Mutational Burden (Mutations/Mb): {{tumorMutationalBurden}}</div>
               <div class="sub_title_03_E">MSI Score: {{msiScore}} (MSS)</div> -->
